--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -9,6 +9,7 @@
         var cnt_recipe=1;
         var post;
 
+        //재료 입력칸을 추가하기 위한 함수
         function addIngredient(){
             var liTag=document.createElement('li');
             liTag.setAttribute('class','ui-sortable-handle');
@@ -21,6 +22,8 @@
             $('#err_test').text("");
             $('#err_recipe').text("");
         }
+
+        //레시피 입력칸을 추가하기 위한 함수
         function addRecipe(){
             var liTag=document.createElement('li');
             liTag.setAttribute('class','recipe-info');
@@ -66,7 +69,7 @@
                 cnt_recipe--;
             });
 
-            //레시피 중간에 추가하는 이벤트
+            //레시피 중간에 레시피 입력칸을 추가하는 이벤트
             $('#recipe').delegate('span#inset_recipe','click',function(){
                 var clone=$(this).parent().clone().empty();
                 var str="<img src='/imgs/user/noimg.png' id='upload_img'> ";
@@ -89,7 +92,7 @@
                 cnt_recipe++;
             });
 
-            //레시피 사진 썸네일 보여주는 이벤트
+            //이미지 파일을 업로드 했을 때 미리 보여주는 기능
             $('#recipe').delegate('.ex_filename','change',function(){
                 var imgnode = $(this).closest('li').children('img');
                 var order=$(this).closest('li').children('input#order').val();
@@ -111,11 +114,13 @@
                 reader.readAsDataURL($(this)[0].files[0]);
             });
 
+            //엔터 입력 시 submit 되는것 막기
             $('input:text').keydown(function(event){
                 if(event.keyCode==13) return false;
             });
 
-            //ajax통신
+            //레시피 정보를 수정하기 위한 ajax
+            //ajax form plugin 사용
             $('#new_recipe').ajaxForm({
               dataType:'json',
               beforeSubmit:function(){
