--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -5,6 +5,8 @@
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script>
       $(document).ready(function(){
+
+        //유저 정보를 추가히기위한 ajax
         $('.new_user_join').submit(function(event){
 
           var email=$('.email').val();
