--- a/views/meetings/main.ejs
+++ b/views/meetings/main.ejs
@@ -7,6 +7,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript">
 
+    //구글맵 초기화
+    //받아온 모임 정보에 따라서 구글맵에 보여줄 마커도 같이 초기화
     var map;
    	var markers=[];
     var infowindows=[];
