--- a/views/meetings/new.ejs
+++ b/views/meetings/new.ejs
@@ -48,6 +48,7 @@
 
 		$(document).ready(function(){
 
+			//이미지 파일을 업로드 했을 때 미리 보여주는 기능
 			$('#recipe').delegate('.ex_filename','change',function(){
 				var imgnode = $(this).closest('li').children('img');
 				imgnode.attr('src','/imgs/user/noimg.png');
@@ -60,11 +61,13 @@
 				reader.readAsDataURL($(this)[0].files[0]);
 			});
 
+			//엔터 입력 시 submit 되는것 막기
 			$('input:text').keydown(function(event){
             	if(event.keyCode==13) return false;
             });
 
-            //ajax통신
+            //모임 추가를 위한 ajax
+            //ajax form plugin 사용
             $('#meeting_form').ajaxForm({
               dataType:'json',
               beforeSubmit:function(){
