--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -13,7 +13,7 @@
         <img src="/imgs/user/<%=session.img%>">
         <label><%=session.name%></label>
         <div class="btn_area">
-          <a href="/users/<%=session.id%>/edit"><button>수정</button></a>
+          <a href="/users/edit/<%=session.id%>"><button>수정</button></a>
         </div>
       </div>
     </div>
